adicionando img e styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="page">
 
-    <img src="" alt="">
+    <img src="assets/main-image.jpg" alt="cupcake de café">
     <main>
     <section id="abount">
       <h1>Cupcake de café com chantilly</h1>
