--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     </section>
     </main>
   </div>
-  
+  <footer>Feito 
+    <img src="assets/Vector.svg" alt="Coração">
+     pelo Yan Michael</footer>
 </body>
 </html>
